# CTrack

./: .auto-claude-security.json  .auto-claude-status  .claude_settings.json  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  docker-compose.yml  verify_api_docs.py
backend/: API_DOCS_VERIFICATION.md  QA_VALIDATION_RESULTS.md  audit_results.txt  auth_audit_report.json  auth_test_results.txt  build-progress.txt  conftest.py  manage.py  pyproject.toml  test_results.txt  verify_imports.sh
backend/api/: __init__.py  admin.py  api.py  auth.py  boards.py  custom_fields.py  demo.py  events.py  feed.py  health.py  issues.py  metrics.py  projects.py  reports.py  search.py  setup.py  sprints.py  users.py
backend/api/issues/: __init__.py  activity.py  attachments.py  backlog.py  comments.py  editing.py  epics.py  issue_types.py  issues.py  statuses.py  workflow.py
backend/api/schemas/: __init__.py  reports.py
backend/api/tests/: test_auth_enforcement.py  test_setup.py
backend/apps/: __init__.py
backend/apps/boards/: admin.py  models.py  schemas.py  services.py
backend/apps/core/: cache.py  email_backend.py  events.py  middleware.py  models.py  tasks.py
backend/apps/custom_fields/: admin.py  apps.py  models.py  schemas.py  services.py
backend/apps/issues/: admin.py  apps.py  models.py  schemas.py  search.py  services.py
backend/backend/: test_api_docs_verification.py
backend/ctrack/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
backend/requirements/: base.txt  dev.txt  lock.txt  prod.txt
backend/scripts/: audit_api_auth.py
(+176 files in other folders)
